--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ptomasroos/react-native-multi-slider",
-  "version": "2.2.2",
+  "name": "@react-native-oh-tpl/react-native-multi-slider",
+  "version": "2.2.2-0.0.1",
   "description": "Android and iOS supported pure JS slider component with multiple markers for React Native",
   "main": "MultiSlider.js",
   "types": "index.d.ts",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ptomasroos/react-native-multi-slider.git"
+    "url": "git+https://github.com/react-native-oh-library/react-native-multi-slider.git"
   },
   "keywords": [
     "react-native-multi-slider",
@@ -46,9 +46,14 @@
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3"
   },
+  "harmony": {
+    "alias": "react-native-multi-slider"
+  },    
   "bugs": {
     "url": "https://github.com/ptomasroos/react-native-multi-slider/issues"
   },
   "homepage": "https://github.com/ptomasroos/react-native-multi-slider#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "2.2.2"
+  }
 }
